# pcap_reader

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.py  setup.sh
app/: __init__.py  routes.py  server_stdlib.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
utils/: __init__.py  hex_dump.py  pcap_parser.py  pcap_parser_stdlib.py  ssh_handler.py  ssh_handler_stdlib.py
